# Efficient-Co-location-Pattern-Mining-in-Large-Spatial-Datasets-with-Rare-Features

./: .gitignore  CMakeLists.txt  COMPLETE_REFACTORING_SUMMARY.md  Efficient-Co-location-Pattern-Mining-in-Large-Spatial-Datasets-with-Rare-Features.cpp  Efficient-Co-location-Pattern-Mining-in-Large-Spatial-Datasets-with-Rare-Features.slnx  Efficient-Co-location-Pattern-Mining-in-Large-Spatial-Datasets-with-Rare-Features.vcxproj  Efficient-Co-location-Pattern-Mining-in-Large-Spatial-Datasets-with-Rare-Features.vcxproj.filters  main.cpp
config/: config.txt
include/: NRTree.h  constants.h  miner.h  neighborhood_mgr.h  spatial_index.h  types.h  utils.h
src/: NRTree.cpp  config.cpp  data_loader.cpp  main.cpp  miner.cpp  neighborhood_mgr.cpp  spatial_index.cpp  test_algorithm.cpp  utils.cpp
